[package]
name = "rand-float-rs"
version = "0.1.0"
edition = "2024"
description = "A comparison of techniques for generating uniform random floating-point numbers in [0, 1) from streams of random bits"
license = "Apache-2.0 OR MIT"
keywords = ["random", "float", "uniform", "prng"]

[dependencies]

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "uniform01"
harness = false

# Best inlining and stable measurements for the benchmarks.
[profile.bench]
lto = true
codegen-units = 1
