[package]
name = "rand-float"
version = "0.2.1"
edition = "2024"
description = "Techniques for converting streams of random bits into floating-point numbers distributed as a uniform real in the unit interval"
license = "(Apache-2.0 OR MIT) AND BSD-2-Clause AND MIT"
keywords = ["random", "float", "uniform", "prng"]
repository = "https://github.com/vigna/rand-float-rs"
documentation = "https://docs.rs/rand-float"
rust-version = "1.85"

[dependencies]
rand_core = { version = "0.10", default-features = false, optional = true }

[features]
default = ["rand"]
# Enables uniform::Unif01Ext, integrating with the rand crate.
rand = ["dep:rand_core"]

[dev-dependencies]
criterion = "0.8.2"
rand = "0.10"

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "uniform01"
harness = false

# Best inlining and stable measurements for the benchmarks.
[profile.bench]
lto = "fat"
codegen-units = 1
